--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<html>
-  <body>
-    <h1>My Website.</h1>
-    <p>This is my website.</p>
-  </body>
-</html>
+---
+layout: home
+---
+
+<!-- Set title and description in config.yml -->
